// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`nullish-coalescing > if statement patterns > should replace if statement with === null || === undefined 1`] = `
"x ??= 5
      "
`;

exports[`nullish-coalescing > if statement patterns > should replace if statement with === undefined || === null 1`] = `
"x ??= 5
      "
`;

exports[`nullish-coalescing > if statement patterns > should replace if statement with loose == null 1`] = `
"x ??= 5
      "
`;

exports[`nullish-coalescing > if statement patterns > should replace multiline if statement 1`] = `
"x ??= 5
      "
`;

exports[`nullish-coalescing > mixed patterns > should handle multiple patterns in one file 1`] = `
"const a = x ?? 'default';
        const b = y ?? 'fallback';
        z ??= 10
      "
`;

exports[`nullish-coalescing > no transformation cases > should not change code already using nullish coalescing 1`] = `
"const result = value ?? defaultValue;
        x ??= 5;
      "
`;

exports[`nullish-coalescing > no transformation cases > should not change other ternary patterns 1`] = `
"const result = value !== null ? value : defaultValue;
        const other = value === undefined ? defaultValue : value;
      "
`;

exports[`nullish-coalescing > ternary patterns > should handle complex expressions 1`] = `
"const name = user.name ?? 'Anonymous';
        const count = obj.prop ?? 0;
      "
`;

exports[`nullish-coalescing > ternary patterns > should replace !== null && !== undefined ternary 1`] = `
"const result = value ?? defaultValue;
      "
`;

exports[`nullish-coalescing > ternary patterns > should replace !== undefined && !== null ternary (reversed order) 1`] = `
"const result = value ?? defaultValue;
      "
`;

exports[`nullish-coalescing > ternary patterns > should replace === null || === undefined ternary 1`] = `
"const result = value ?? defaultValue;
      "
`;

exports[`nullish-coalescing > ternary patterns > should replace === undefined || === null ternary (reversed order) 1`] = `
"const result = value ?? defaultValue;
      "
`;

exports[`nullish-coalescing > ternary patterns > should replace loose != null ternary 1`] = `
"const result = value ?? defaultValue;
      "
`;

exports[`nullish-coalescing > ternary patterns > should replace loose == null ternary 1`] = `
"const result = value ?? defaultValue;
      "
`;
